--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html><style lang="en" type="text/css" id="night-mode-pro-style">html {background-color: #FFFFFF !important; filter: grayscale(3%) !important;} body {background-color: #FFFFFF;}</style><link type="text/css" rel="stylesheet" id="night-mode-pro-link"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style id="stndz-style"></style><title>W3.CSS Template</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="./W3.CSS Template 2_files/w3.css">
-<link rel="stylesheet" href="./W3.CSS Template 2_files/css">
-<link rel="stylesheet" href="./W3.CSS Template 2_files/font-awesome.min.css">
+<link rel="stylesheet" href="./index/w3.css">
+<link rel="stylesheet" href="./index/css">
+<link rel="stylesheet" href="./index/font-awesome.min.css">
 <style>
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </style>
