--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- saved from url=(0057)https://www.w3schools.com/w3css/tryw3css_templates_cv.htm -->
-<html><style lang="en" type="text/css" id="night-mode-pro-style">html {background-color: #FFFFFF !important; filter: grayscale(3%) !important;} body {background-color: #FFFFFF;}</style><link type="text/css" rel="stylesheet" id="night-mode-pro-link"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style id="stndz-style"></style><title>W3.CSS Template</title>
+<html><style lang="en" type="text/css" id="night-mode-pro-style">html {background-color: #FFFFFF !important; filter: grayscale(3%) !important;} body {background-color: #FFFFFF;}</style><link type="text/css" rel="stylesheet" id="night-mode-pro-link"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style id="stndz-style"></style><title>Edward Omi</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="./index/w3.css">
