--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Network Officer</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>March 2014 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Responsibilities include overlooking the smooth operation of Buka General Hospitals Local Area Network and WLAN. Making sure network devices and peripherals operate normally. Maintaining the Hospital’s proxy server and windows server 2012. Establishing and managing the hospitals internet service. In addition to that I also assisting with the hospital budget preparation in the absence of a budget officer. Other responsibilities include database management of the hospital Personnel emoluments.</p>
+          <p>Summary of responsibilities and Deliverables
+I was responsible for providing technical support to end users. This primarily involved installing, configuring, maintaining and troubleshooting computer hardware, software and  MS Server administration. 
+As the  network support offer my  task involved the design, scoping and installation of the Hospital Local Area Network. This invloved configuring routers, LAN cable management, network switch installation, proxy server configuration, bandwidth management and monitoring network usage. A key deliverable while working for the Hospital was the establishment of a Local Area Network and internet access for clinicians. 
+An additional task that was included in my responsibility was the annual budget planning and submission to the PNG National Department for Health for funding provision to Buka Hospital. Key deliverables included the submission of budget proposal and entry of budget requirements into the PNG Integrated Financial Management System. 
+</p>
           <hr>
         </div>
         <div class="w3-container">
