--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
 <div class="w3-container">
-          <h5 class="w3-opacity"><b>Support Services Senior Assistant (ICT & Logistics)</b></h5>
+          <h5 class="w3-opacity"><b>Support Services Senior Assistant (ICT & Logistics) - United Nations Office for Project Services</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2022 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
           <p>In procurement I was involved in identifying the office needs, finding suppliers to provide  goods or services ,negotiating price and contracts and ensuring purchases are done in a timely and cost effective manner while adhering to the UNOPS policies and procedures. Key deliverables included the assisting the completion of the UNOPS PNG office fitout and organizing transport logistics for project staff for mission trips throughout sites in Papua New Guinea. 
 My role in ICT involved managing and maintaining the UNOPS ICT office ICT services. This included maintaining support for  software and networking systems that are used by UNOPs in PNG as well as providing technical support to clients. I ensure that there is increased efficiency, improved, communication and better decision making by providing ICT support. A key deliverable is the succesful setup and operation of the Cisco Meraki Office in the Box for the UNOPS PNG office (OIBv4)
@@ -86,7 +86,7 @@ As the asset focal point I had the responsibility of asset management for office
           <hr>
         </div>     
 	   <div class="w3-container">
-          <h5 class="w3-opacity"><b>Network Officer</b></h5>
+          <h5 class="w3-opacity"><b>Network Officer (Buka General Hospital)</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>March 2014 - <span class="w3-tag w3-teal w3-round">April 2022</span></h6>
           <p>
 I was responsible for providing technical support to end users. This primarily involved installing, configuring, maintaining and troubleshooting computer hardware, software and  MS Server administration. 
