--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ As the asset focal point I had the responsibility of asset management for office
         </div>     
 	   <div class="w3-container">
           <h5 class="w3-opacity"><b>Network Officer (Buka General Hospital)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>March 2014 - <span class="w3-tag w3-teal w3-round">April 2022</span></h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>March 2014 - April 2022 <span class="w3-tag w3-teal w3-round">8 Years</span></h6>
           <p>
 I was responsible for providing technical support to end users. This primarily involved installing, configuring, maintaining and troubleshooting computer hardware, software and  MS Server administration. 
 As the  network support offer my  task involved the design, scoping and installation of the Hospital Local Area Network. This invloved configuring routers, LAN cable management, network switch installation, proxy server configuration, bandwidth management and monitoring network usage. A key deliverable while working for the Hospital was the establishment of a Local Area Network and internet access for clinicians. 
@@ -97,20 +97,28 @@ An additional task that was included in my responsibility was the annual budget 
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Assistant Administration Manager (International Training Intitute)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2013 - March 2014</h6>
-          <p>Managed the International training institute branch in Bougainville. My responsibilities included the smooth running of the branch making sure students paid their tuition. In addition I managed a support staff of 4 employees and carried out tutorial classes on the Microsoft office suite.</p>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2013 - March 2014 <span class="w3-tag w3-teal w3-round">5 Months</span></h6>
+          <p>Provided support and assistance to the administration manager ensuring that the international training institute branch at Kokopau operated effectivly and  efficiently. 
+Managed a small operational budget for the branch and supervised a staff of four while coordinating schedules and events for the institution. 
+Maintained the branch database and records and monitored the performance of staff and students ensuring that procedures and policies were adhered to.
+Managed and reconciled Petty cash expenses for the institute branch. 
+</p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Freelance IT (Edtech IT Services & Solutions)</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2012 - October 2013</h6>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>April 2012 - October 2013 <span class="w3-tag w3-teal w3-round">6 Months</span></h6>
           <p>Provided IT support services that involved computer hardware repair, software configuration, network setup and website design & hosting.</p><br>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>IT Lecturer</b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>March 2010 - May 2011</h6>
-          <p>Trained students in the basic use of Microsoft office applications, as well introducing students to computing concepts such as database design, computer architecture, Networking and Internet Technology. In addition I also taught students on web page design using adobe Dreamweaver and project management. Prepared practical lessons for students and coordinated three subjects which include Web Page Design, Project Management and Introduction to Computing.</p><br>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>March 2010 - May 2011 <span class="w3-tag w3-teal w3-round">1 Year 2 Months</span></h6>
+          <p>Responsible for training students in the basic use of Microsoft office suite 
+Trained students on computing concepts such as database design, computer architecture, Networking and Internet Technology. 
+Lectured students on web page design and project management.
+Prepared practical lessons for students and coordinated three subjects on Web Page Design, Project Management and Introduction to Computing. This included creating learning content for each subject
+</p><br>
         </div>
       </div>
 
