--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
           <h5 class="w3-opacity"><b>Lincoln Univeristy , Lincoln, Christchurch, New Zealand</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017</h6>
           <p>Post-Graduate Diploma in Informatics</p>
+		  <p> Courses undertaken include: <br>
+		  Interaction Design <br>
+          Systems Thinking and Dynamics <br>
+          Advanced Geograhpic Information System <br>
+          Social research Methods <br>
+</p>
           <hr>
         </div>
         <div class="w3-container">
