--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Tok Pisin</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn3nIenPDfsPv7ayhDDNG1ls8WFg5TUWeOQXfCLQ6dyputjA/viewform?embedded=true" width="640" height="1118" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
           </div>
           <br>
         </div>
@@ -155,7 +156,7 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity"><iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn3nIenPDfsPv7ayhDDNG1ls8WFg5TUWeOQXfCLQ6dyputjA/viewform?embedded=true" width="640" height="1118" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></i>
+  <i class="fa fa-facebook-official w3-hover-opacity"></i>
   <i class="fa fa-instagram w3-hover-opacity"></i>
   <i class="fa fa-snapchat w3-hover-opacity"></i>
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
