--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p>Tok Pisin</p>
           <div class="w3-light-grey w3-round-xlarge">
             <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
-			<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdn3nIenPDfsPv7ayhDDNG1ls8WFg5TUWeOQXfCLQ6dyputjA/viewform?embedded=true" width="640" height="1118" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-          </div>
+			</div>
           <br>
         </div>
       </div><br>
@@ -143,6 +142,7 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
           <p>Bachelor Degree in Computer Science</p>
           <hr>
         </div>
+		<p>Contact Me <a href="https://forms.gle/K4jLy2xHuiYy45Hy8" target="_blank">Contact Form</a></p>
       </div>
 
     <!-- End Right Column -->
