--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
           <p>Bachelor Degree in Computer Science</p>
           <hr>
         </div>
-		<p>Contact Me <a href="https://forms.gle/K4jLy2xHuiYy45Hy8" target="_blank">Contact Form</a></p>
+		<p><a href="https://forms.gle/K4jLy2xHuiYy45Hy8" target="_blank">Contact Me</a></p>
       </div>
 
     <!-- End Right Column -->
