--- a/index.html
+++ b/index.html
@@ -140,6 +140,13 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
           <h5 class="w3-opacity"><b>Papua New Guinea University of Technology</b></h5>
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2006 - 2009</h6>
           <p>Bachelor Degree in Computer Science</p>
+		  <p> Courses undertaken include: <br>
+		  Object Oriented Programming <br>
+          Advanced Networking <br>
+          Database Design - MySql<br>
+          Software Engineering<br>
+		  Programming in Java, C++, PHP <br>
+</p>
           <hr>
         </div>
 		<p><a href="https://forms.gle/K4jLy2xHuiYy45Hy8" target="_blank">Contact Me</a></p>
