--- a/index.html
+++ b/index.html
@@ -163,13 +163,8 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity"></i>
-  <i class="fa fa-instagram w3-hover-opacity"></i>
-  <i class="fa fa-snapchat w3-hover-opacity"></i>
-  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-  <i class="fa fa-twitter w3-hover-opacity"></i>
-  <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <i class="fa fa-facebook-official w3-hover-opacity">Facebook</i>
+  <i class="fa fa-linkedin w3-hover-opacity"><a href="https://www.linkedin.com/in/edward-omi-profile/" target="_blank">Linkedin</a></i>
 </footer>
 
 
