--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <i class="fa fa-facebook-official w3-hover-opacity">Facebook</i>
-  <i class="fa fa-linkedin w3-hover-opacity"><a href="https://www.linkedin.com/in/edward-omi-profile/" target="_blank">Linkedin</a></i>
+  <a href="https://www.linkedin.com/in/edward-omi-profile/" target="_blank">Facebook</a>
+  <a href="https://www.linkedin.com/in/edward-omi-profile/" target="_blank">Linkedin</a>
 </footer>
 
 </body><grammarly-desktop-integration data-grammarly-shadow-root="true"></grammarly-desktop-integration></html>
