--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Buka, Papua New Guinea</p>
           <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>omi.edward@gmail.com</p>
           <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>Ph: +675 7096 3908</p>
+		  <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal">O</i><a href="https://forms.gle/K4jLy2xHuiYy45Hy8" target="_blank">Contact Me</a></p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
@@ -149,7 +150,6 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
 </p>
           <hr>
         </div>
-		<p><a href="https://forms.gle/K4jLy2xHuiYy45Hy8" target="_blank">Contact Me</a></p>
       </div>
 
     <!-- End Right Column -->
