--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>ICT Specialist</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Buka, Papua New Guinea</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>omi.edward@gmail.com</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>Ph: +675 7096 3908</p>
+          <p><i class="fas fa-phone-alt fa-fw w3-margin-right w3-large w3-text-teal"></i>ICT Specialist</p>
+          <p><i class="fas fa-phone-alt fa-fw w3-margin-right w3-large w3-text-teal"></i>Buka, Papua New Guinea</p>
+          <p><i class="fas fa-phone-alt fa-fw w3-margin-right w3-large w3-text-teal"></i>omi.edward@gmail.com</p>
+          <p><i class="fas fa-phone-alt fa-fw w3-margin-right w3-large w3-text-teal"></i>Ph: +675 7096 3908</p>
 		  <p><i class="fas fa-phone-alt fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="https://forms.gle/K4jLy2xHuiYy45Hy8" target="_blank">Contact Me</a></p>
           <hr>
 
