--- a/index.html
+++ b/index.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <!-- saved from url=(0057)https://www.w3schools.com/w3css/tryw3css_templates_cv.htm -->
-<html><style lang="en" type="text/css" id="night-mode-pro-style">html {background-color: #FFFFFF !important; filter: grayscale(3%) !important;} body {background-color: #FFFFFF;}</style><link type="text/css" rel="stylesheet" id="night-mode-pro-link"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style id="stndz-style"></style><title>Edward Omi</title>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="./index/w3.css">
-<link rel="stylesheet" href="./index/css">
-<link rel="stylesheet" href="./index/font-awesome.min.css">
-<style>
-html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
-</style>
+<html>  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Edward Omi</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./index/w3.css">
+    <link rel="stylesheet" href="./index/css">
+    <link rel="stylesheet" href="./index/font-awesome.min.css">
+    <style>
+        html, body, h1, h2, h3, h4, h5, h6 {
+            font-family: "Roboto", sans-serif;
+            color: #FFFFFF; /* Set text color to white */
+        }
+        body {
+            background-color: #1e1e1e; /* Set dark background color */
+        }
+        .w3-text-grey {
+            color: #CCCCCC; /* Adjust text color for grey text */
+        }
+        .w3-container {
+            color: #FFFFFF; /* Adjust text color for container content */
+        }
+        .w3-teal, .w3-text-teal {
+            color: #4CAF50 !important; /* Adjust teal color */
+        }
+        .w3-light-grey {
+            background-color: #424242; /* Adjust light grey background */
+        }
+    </style>
 <link id="avast_os_ext_custom_font" href="chrome-extension://mbckjcfnjmoiinpgddefodcighgikkgn/common/ui/fonts/fonts.css" rel="stylesheet" type="text/css"></head><body class="w3-light-grey" data-new-gr-c-s-check-loaded="14.1036.0" data-gr-ext-installed="">
 
 <!-- Page Container -->
