--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
   <p>Find me on social media.</p>
-  <a href="https://www.linkedin.com/in/edward-omi-profile/" target="_blank">Facebook</a>
+  <a href="https://www.linkedin.com/in/edward-omi-profile/" target="_blank" class="w3-margin-right"><i class="fab fa-facebook-square"></i></a>
   <a href="https://www.linkedin.com/in/edward-omi-profile/" target="_blank">Linkedin</a>
 </footer>
 
