--- a/index.html
+++ b/index.html
@@ -130,10 +130,12 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2017</h6>
           <p>Post-Graduate Diploma in Informatics</p>
 		  <p> Courses undertaken include: <br>
-		  Interaction Design <br>
-          Systems Thinking and Dynamics <br>
-          Advanced Geograhpic Information System <br>
-          Social research Methods <br>
+		  <ul>
+		  <li>Interaction Design </li>
+          <li> Systems Thinking and Dynamics </li>
+          <li> Advanced Geograhpic Information System </li>
+          <li> Social research Methods </li>
+		  </ul>
 </p>
           <hr>
         </div>
@@ -142,11 +144,13 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
           <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2006 - 2009</h6>
           <p>Bachelor Degree in Computer Science</p>
 		  <p> Courses undertaken include: <br>
-		  Object Oriented Programming <br>
-          Advanced Networking <br>
-          Database Design - MySql<br>
-          Software Engineering<br>
-		  Programming in Java, C++, PHP<br>
+		   <ul>
+		  <li>Object Oriented Programming</li>
+          <li>Advanced Networking</li>
+          <li>Database Design - MySql</li>
+          <li>Software Engineering</li>
+		  <li>Programming in Java, C++, PHP</li>
+		  </ul>
 </p>
           <hr>
         </div>
