--- a/index.html
+++ b/index.html
@@ -127,6 +127,14 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
         <h2 class="w3-text-grey w3-padding-16">Education</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Lincoln Univeristy , Lincoln, Christchurch, New Zealand</b></h5>
+		  
+		  <iframe src="https://www.google.com/maps/d/edit?mid=1ChwzJB_0Wbm1rtUj2DiWLc87Unp79uQ&usp=sharing" 
+    width="600" 
+    height="450" 
+    style="border:0;" 
+    allowfullscreen="" 
+    loading="lazy">
+          </iframe>
 		  <a href="https://www.google.com/maps/d/edit?mid=1ChwzJB_0Wbm1rtUj2DiWLc87Unp79uQ&usp=sharing" target="_blank">Map here</a>
           <h6 class="w3-text-teal">2017</h6>
           <p>Post-Graduate Diploma in Informatics</p>
