--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Lincoln Univeristy , Lincoln, Christchurch, New Zealand</b></h5>
 		  
-		  <iframe src="https://www.google.com/maps/d/u/0/edit?mid=1ChwzJB_0Wbm1rtUj2DiWLc87Unp79uQ&usp=sharing" 
+		  <iframe src="<iframe src="https://www.google.com/maps/d/embed?mid=1ChwzJB_0Wbm1rtUj2DiWLc87Unp79uQ&ehbc=2E312F" width="640" height="480"></iframe>" 
     width="600" 
     height="450" 
     style="border:0;" 
