Updating work duration

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16">Work Experience</h2>
 <div class="w3-container">
           <h5 class="w3-opacity"><b>IT Support Specialist - ABT Global </b></h5>
-          <h6 class="w3-text-teal">July 2024 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <h6 class="w3-text-teal">July 2024 - Current <span class="w3-tag w3-teal w3-round"> 1 Year </span></h6>
           <p>Providing comprehensive ICT support for ABT Global’s Buka and Arawa office, ensuring smooth operation of hardware, software, 
             and network systems. Responsibilities included troubleshooting technical issues, performing system updates, configuring and
              maintaining ICT equipment, and providing first-level support to staff. assisting in ICT procurement, monitoring service desk tickets, 
@@ -90,7 +90,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         </div> 
 <div class="w3-container">
           <h5 class="w3-opacity"><b>Support Services Senior Assistant (ICT & Logistics) - United Nations Office for Project Services</b></h5>
-          <h6 class="w3-text-teal">April 2022 - <span class="w3-tag w3-teal w3-round">July 2024</span></h6>
+          <h6 class="w3-text-teal">April 2022 - July 2024<span class="w3-tag w3-teal w3-round">2 Years</span></h6>
           <p>In procurement I was involved in identifying the office needs, finding suppliers to provide  goods or services ,negotiating price and contracts and ensuring purchases are done in a timely and cost effective manner while adhering to the UNOPS policies and procedures. Key deliverables included the assisting the completion of the UNOPS PNG office fitout and organizing transport logistics for project staff for mission trips throughout sites in Papua New Guinea. 
 My role in ICT involved managing and maintaining the UNOPS ICT office ICT services. This included maintaining support for  software and networking systems that are used by UNOPs in PNG as well as providing technical support to clients. I ensure that there is increased efficiency, improved, communication and better decision making by providing ICT support. A key deliverable is the succesful setup and operation of the Cisco Meraki Office in the Box for the UNOPS PNG office (OIBv4)
 As the asset focal point I had the responsibility of asset management for office equipment. This responsibility involved managing the office and ICT assets, ensuring that regular audits are conducted and asset records are  constantly updated.
