--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <div class="w3-container w3-card w3-white w3-margin-bottom">
         <h2 class="w3-text-grey w3-padding-16">Work Experience</h2>
 <div class="w3-container">
-          <h5 class="w3-opacity"><b>IT Support Specialist - ABT Global </b></h5>
+          <h5 class="w3-opacity"><b>IT Support Specialist </b></h5>
+          <h5 class="w3-opacity"><b>Employer - ABT Global </b></h5>
           <h6 class="w3-text-teal">July 2024 - Current <span class="w3-tag w3-teal w3-round"> 1 Year </span></h6>
           <p>Providing comprehensive ICT support for ABT Global’s Buka and Arawa office, ensuring smooth operation of hardware, software, 
             and network systems. Responsibilities included troubleshooting technical issues, performing system updates, configuring and
@@ -105,7 +106,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <hr>
         </div> 
 <div class="w3-container">
-          <h5 class="w3-opacity"><b>Support Services Senior Assistant (ICT & Logistics) - United Nations Office for Project Services</b></h5>
+          <h5 class="w3-opacity"><b>Support Services Senior Assistant (ICT & Logistics) </b></h5>
+          <h5 class="w3-opacity"><b>Employer - United Nations Office for Project Services (UNOPS)</b></h5>
           <h6 class="w3-text-teal">April 2022 - July 2024 <span class="w3-tag w3-teal w3-round"> 2 Years </span></h6>
           <p>In procurement I was involved in identifying the office needs, finding suppliers to provide  goods or services ,negotiating price and contracts and ensuring purchases are done in a timely and cost effective manner while adhering to the UNOPS policies and procedures. Key deliverables included the assisting the completion of the UNOPS PNG office fitout and organizing transport logistics for project staff for mission trips throughout sites in Papua New Guinea. 
 My role in ICT involved managing and maintaining the UNOPS ICT office ICT services. This included maintaining support for  software and networking systems that are used by UNOPs in PNG as well as providing technical support to clients. I ensure that there is increased efficiency, improved, communication and better decision making by providing ICT support. A key deliverable is the succesful setup and operation of the Cisco Meraki Office in the Box for the UNOPS PNG office (OIBv4)
@@ -115,6 +117,7 @@ As the asset focal point I had the responsibility of asset management for office
         </div>     
 	   <div class="w3-container">
           <h5 class="w3-opacity"><b>Network Officer (Buka General Hospital)</b></h5>
+          <h5 class="w3-opacity"><b>Employer - Buka General Hospital (National Department of Health) </b></h5>
           <h6 class="w3-text-teal">March 2014 - April 2022 <span class="w3-tag w3-teal w3-round">8 Years</span></h6>
           <p>
 I was responsible for providing technical support to end users. This primarily involved installing, configuring, maintaining and troubleshooting computer hardware, software and  MS Server administration. 
@@ -125,6 +128,7 @@ An additional task that was included in my responsibility was the annual budget 
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Assistant Administration Manager (International Training Intitute)</b></h5>
+          <h5 class="w3-opacity"><b>Employer - International Training Institute</b></h5>
           <h6 class="w3-text-teal">Oct 2013 - March 2014 <span class="w3-tag w3-teal w3-round">5 Months</span></h6>
           <p>Provided support and assistance to the administration manager ensuring that the international training institute branch at Kokopau operated effectivly and  efficiently. 
 Managed a small operational budget for the branch and supervised a staff of four while coordinating schedules and events for the institution. 
@@ -135,12 +139,14 @@ Managed and reconciled Petty cash expenses for the institute branch.
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Freelance IT (Edtech IT Services & Solutions)</b></h5>
+          <h5 class="w3-opacity"><b>Self Employed</b></h5>
           <h6 class="w3-text-teal">April 2012 - October 2013 <span class="w3-tag w3-teal w3-round">6 Months</span></h6>
           <p>Provided IT support services that involved computer hardware repair, software configuration, network setup and website design & hosting.</p><br>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>IT Lecturer</b></h5>
+          <h5 class="w3-opacity"><b>Employer - International Training Institute</b></h5>
           <h6 class="w3-text-teal">March 2010 - May 2011 <span class="w3-tag w3-teal w3-round">1 Year 2 Months</span></h6>
           <p>Responsible for training students in the basic use of Microsoft office suite 
 Trained students on computing concepts such as database design, computer architecture, Networking and Internet Technology. 
