updated meta information

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <!-- saved from url=(0057)https://www.w3schools.com/w3css/tryw3css_templates_cv.htm -->
 <html><style lang="en" type="text/css" id="night-mode-pro-style">html {background-color: #FFFFFF !important; filter: grayscale(3%) !important;} body {background-color: #FFFFFF;}</style><link type="text/css" rel="stylesheet" id="night-mode-pro-link"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style id="stndz-style"></style><title>Edward Omi</title>
-<meta name="google-site-verification" content="0qWVGMV0E5_hab2f3BL9CLK0AQkt68XMqZ1E5BVJ-_Y" />
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Edward Omi - ICT associate, AI and GIS enthusiast, online business developer, and technology trainer in Papua New Guinea.">
+<meta name="keywords" content="Edward Omi, ICT, AI, GIS, online business, Papua New Guinea">
+<meta name="author" content="Edward Omi">
 <link rel="stylesheet" href="./index/w3.css">
 <link rel="stylesheet" href="./index/css">
 <link rel="stylesheet" href="./index/font-awesome.min.css">
