--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
 <meta name="description" content="Edward Omi - ICT associate, AI and GIS enthusiast, online business developer, and technology trainer in Papua New Guinea.">
 <meta name="keywords" content="Edward Omi, ICT, AI, GIS, online business, Papua New Guinea">
 <meta name="author" content="Edward Omi">
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Edward Omi",
+  "jobTitle": "ICT Specialist",
+  "url": "https://eddieomi.github.io",
+  "sameAs": [
+    "https://www.linkedin.com/in/edward-omi-profile/",
+    "https://www.youtube.com/@edwardomi8352"
+  ]
+}
+
+</script>
 <link rel="stylesheet" href="./index/w3.css">
 <link rel="stylesheet" href="./index/css">
 <link rel="stylesheet" href="./index/font-awesome.min.css">
