updated educational information

--- a/index.html
+++ b/index.html
@@ -187,9 +187,32 @@ Prepared practical lessons for students and coordinated three subjects on Web Pa
           </div>
           <h6 class="w3-text-teal">2017</h6>
           <p>Post-Graduate Diploma in Informatics</p>
+            <p> Courses undertaken include: <br>
+		        <ul>
+		          <li>Interaction Design </li>
+              <li> Systems Thinking and Dynamics </li>
+              <li> Advanced Geograhpic Information System </li>
+              <li> Social research Methods </li>
+		        </ul> 
+        </p>
           <hr>
         </div>
-        <!-- More education here -->
+       </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Papua New Guinea University of Technology</b></h5>
+          <h6 class="w3-text-teal">2006 - 2009</h6>
+          <p>Bachelor Degree in Computer Science</p>
+		  <p> Courses undertaken include: <br>
+		          <ul>
+		            <li>Object Oriented Programming</li>
+                  <li>Advanced Networking</li>
+                  <li>Database Design - MySql</li>
+                  <li>Software Engineering</li>
+		              <li>Programming in Java, C++, PHP</li>
+		          </ul>
+            </p>
+          <hr>
+        </div>
       </div>
     </div>
   </div>
